<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/generate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.349" />

            <TextView
                android:id="@+id/results"
                android:layout_width="283dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.923" />

            <TextView
                android:id="@+id/result1"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toEndOf="@+id/result2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.483" />

            <TextView
                android:id="@+id/result4"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/result5"
                app:layout_constraintHorizontal_bias="0.634"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.673" />

            <TextView
                android:id="@+id/result5"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.673" />

            <TextView
                android:id="@+id/result6"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toEndOf="@+id/result5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.673" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="226dp"
                android:layout_height="26dp"
                android:text="@string/allGenNum"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.838" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="309dp"
                android:layout_height="42dp"
                android:text="@string/mainHeaderLabel"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.093" />

            <EditText
                android:id="@+id/userInput"
                android:layout_width="108dp"
                android:layout_height="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.327"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.159"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="102dp"
                android:layout_height="48dp"
                android:text="@string/removeNumberButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.689"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.159" />

            <Button
                android:id="@+id/button3"
                android:layout_width="87dp"
                android:layout_height="48dp"
                android:text="@string/resetRemoveNumbers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.018"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.159" />

            <Button
                android:id="@+id/changeResult1"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toTopOf="@+id/result4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result1"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/changeResult4"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/changeResult5"
                app:layout_constraintHorizontal_bias="0.634"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result4"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/changeResult5"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result5"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/changeResult6"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result6"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/changeResult2"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toTopOf="@+id/result5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result2"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/changeResult3"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/changeNumberButton"
                app:layout_constraintBottom_toTopOf="@+id/result6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result3"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>